mtom revision sent to Ian

--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -37,15 +37,14 @@
 
 \begin{abstract}
 \noindent
-What could someone represent that would enable her to track, at least within limits, perceptions, knowledge states and beliefs including false beliefs? 
-An obvious possibility is that she might represent these very propositional attitudes as such.
+What could someone represent that would enable her to track, at least within limits, others' perceptions, knowledge states and beliefs including false beliefs? 
+An obvious possibility is that she might represent these very attitudes as such.
 It is sometimes tacitly or explicitly assumed that this is the only possible answer.
 However we argue that several recent discoveries in developmental, cognitive, and comparative psychology indicate the need for other, less obvious possibilities.
 Our aim is to meet this need by describing the construction of a minimal theory of mind.  
 Minimal theory of mind is rich enough to explain systematic success on tasks held to be acid tests for theory of mind cognition including many false belief tasks.  
-It is also extensible in ways that can explain a wide range of findings from non-human animals and human infants that are sometimes presented as evidence for full-blown theory of mind cognition.  
 Yet minimal theory of mind does not require representing propositional attitudes, or any other kind of representation, as such.
-Minimal theory of mind may be what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load, able to track, within limits, facts about perceptions and beliefs.
+Minimal theory of mind may be what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load,  to track others' perceptions, knowledge states and beliefs.
 
 \ 
 
@@ -57,7 +56,7 @@ Theory of Mind, False Belief, belief, perception, development, comparative
 
 
 \section{Introduction}
-What could someone represent that would enable her to track, at least within limits, perceptions, knowledge states and beliefs including false beliefs? 
+What could someone represent that would enable her to track, at least within limits, others' perceptions, knowledge states and beliefs including false beliefs? 
 One answer is obvious: she might track these things by virtue of representing them as such, that is, by representing perceptions, beliefs, and other propositional attitudes as such.
 Our aim in what follows is to identify another, less obvious answer.
 There is a form of cognition---minimal theory of mind---which does not involve representing propositional attitudes as such but does involve representing simpler, relational mental states which could, within limits, enable one to track propositional attitudes such as beliefs.
@@ -275,9 +274,9 @@ For example, on chimpanzees: \citet{Tomasello:2005ce,
 			\citet[p.\ 73]{Emery:2007ze}.
 }
 If these arguments are not yet decisive
-and if the available evidence does not already tightly constrain the space of admissible conjectures,
+and if the available evidence does not already tightly constrain the space of admissible hypotheses,
 then the construction of a minimal theory of mind may also be relevant to these debates.
-For the conjecture that minimal theory of mind explains chimpanzees' or scrub-jays' abilities to track perceptions or beliefs can be empirically distinguished from conjectures about representations of nonintentional behaviour only and from conjectures about representations of perceptions, knowledge states and beliefs (as we explain in section *** below).
+For the hypothesis that minimal theory of mind explains particular subjects' abilities to track perceptions or beliefs can be empirically distinguished from hypotheses about representations of nonintentional behaviour only and also from hypotheses about representations of perceptions, knowledge states and beliefs (as we explain in Sections \ref{sec:limits1} and \ref{sec:limits2} below).
 
 
 %The construction of minimal theory of mind shows that there is a form of theory of mind cognition which does not involve representing beliefs or other propositional attitudes as such but is capable of explaining, within limits, systematic success on a range of false belief tasks.
@@ -291,12 +290,12 @@ For the conjecture that minimal theory of mind explains chimpanzees' or scrub-ja
 
 
 \section{Minimal theory of mind}
-
+\label{sec:minimal}
 In this section we begin with someone, call her Lucky, capable  of representing nonintentional behaviour only and ask what more is needed for minimal theory of mind cognition.  We describe Lucky’s progress with a series of principles. The principles are constructed in such a way that it would be coherent to suppose that Lucky has the abilities codified by the first \textit{n} principles only. They are not intended to represent a developmental or evolutionary progression.  The principles can also be extended to explain more sophisticated theory of mind abilities than those considered here.  We restrict ourselves to these five principles because they are sufficient to explain success on some false belief tasks.%
 \footnote{
 In standard false belief tasks, `[t]he subject is aware that he/she and another person [call him Maxi] witness a certain state of affairs x.  Then, in the absence of the other person the subject witnesses an unexpected change in the state of affairs from x to y' \citep[][p.\ 106]{en_89}.  The test concerns whether the subject realises that Maxi will falsely believe x to obtain.  In many cases the states of affairs, x and y, differ only with respect to the location of an object \citep[e.g.][]{en_1092, en_1208, en_1824}. 
 As we go on to discuss, our proposal for a minimal theory of mind could be extended to cover a range of other cases;
-but importantly there are also false belief tasks success on which cannot be explained by minimal theory of mind cognition (see section ***).
+but importantly there are also false belief tasks success on which cannot be explained by minimal theory of mind cognition (see Section \vref{sec:limits1}).
 }
 
 
@@ -624,7 +623,13 @@ One way to avoid the problem of the behaviour-representing demon is to set tasks
 
 For other subjects we need an indirect measure.  If subjects sometimes represent encounters or perceptions as such, then representations of others’ encounters may interfere with expectations or judgements about reality or with judgements about one’s own perceptions and beliefs \citep[so-called `altercentric interference',][]{Samson:2010jm}.  For example, representing a protagonists’ encounter with an object at a particular location may interfere with expectations about the object’s actual location.  Accordingly, evidence that there is such interference when in a situation where others have different perceptions or beliefs would provide indirect evidence for theory of mind cognition (minimal or full-blown) over behavioural strategies, for such interference would be difficult to explain if subjects were representing behaviours only. Evidence showing this kind of altercentric interference has recently been found in human adults \citep[]{en_1797, Samson:2010jm}. These studies show that adults’ judgements about the number of objects they could see in a visual scene were slower and more error-prone when the scene contained an irrelevant other whose perspective was different, suggesting that another’s perspective can cause altercentric interfere. 
 
-Of course it was never in question that adults represent encounters or perceptions and not only behaviours; the relevance of these studies is that they demonstrate that altercentric interference can be used as an indirect measure for distinguishing behavioural strategies from minimal theory of mind cognition.  \citet[]{kovacs_social_2010} report evidence of altercentric interference in infants’ expectations about the presence of an object.  Their study suggests that infants’ surprise when their expectations about an object’s presence or absence are violated is modulated by facts about another’s expectations about that object’s location.  Infants looked for less time at the unexpected presence of an object behind a screen when another observer incorrectly expected it to be there than when the observed did not expect it to be there. These findings seem to be evidence of altercentric interference, which is consistent with either minimal or full-blown theory of mind but difficult to explain if participants are exclusively using behavioural strategies.
+Of course it was never in question that adults represent encounters or perceptions and not only behaviours; the relevance of these studies is that they demonstrate that altercentric interference can be used as an indirect measure for distinguishing behavioural strategies from minimal theory of mind cognition.  \citet[]{kovacs_social_2010} report evidence of possible altercentric interference in infants’ expectations about the presence of an object.  Their study suggests that infants’ surprise when their expectations about an object’s presence or absence are violated is modulated by facts about another’s expectations about that object’s location.  Infants looked for less time at the unexpected presence of an object behind a screen when another observer incorrectly expected it to be there than when the observed did not expect it to be there. These findings may be evidence of altercentric interference,%
+\footnote{
+An anonymous referee pointed out that  this is not the only possible interpretation.
+% raised the possibility that the pattern of infants'  looking times in this experiment might be explained not by their representing others' expectations but rather by their representing others' presence or absence at critical moments.  
+We do not mean to suggest that a single study provides decisive evidence for altercentric interference, only that in the wider context of research on infant theory of mind  it provides an indication and constitutes progress on the question of how altercentric interference could be measured.
+}
+which would be consistent with either minimal or full-blown theory of mind but difficult to explain in a principled way if subjects are  using behavioural strategies only.
 
 A related way to distinguish behavioural strategies from minimal theory of mind or something stronger is by means of self-other inference.  Emery and Clayton (\citeyear[]{en_1411}) divided scrub-jays into those who had previously pilfered food and those who had never pilfered.  All subjects then cached some food in private and cached some more food while being observed.  When later given privacy, the pilferers re-cached the food they had earlier cached in the presence of the observer but did not re-cache the food they had cached in private.  The non-pilferers did not show this pattern of behaviour and did little re-caching.\footnote{ 	Similar results might be found if this paradigm were adapted for human infants \citep[see][]{en_1707}.}  This is difficult to reconcile with the hypothesis that scrub-jays rely entirely on behavioural strategies.  By contrast, the hypothesis that scrub-jays have at least minimal theory of mind and so are able to represent goal-directed actions as such allows us to suppose that engaging in pilfering alerts them to the possibility that others may do the same.\footnote{ 	In later discussions these authors claim that the pilferers may be projecting their own experiences onto others in the sense that they are using `their own experiences to infer experiences in others' \citep[][p.\ 81]{Emery:2007ze}.  This claim goes beyond our suggestion, which involves goals rather than experiences and salience rather than projection.  }
 
@@ -651,9 +656,12 @@ By contrast full-blown theory of mind cognition may be comparatively rare
 thanks to the conceptual and cognitive demands associated with representing beliefs and other propositional attitudes as such.  
 If so it is useful to identify what else someone could represent that would enable her to track, in a limited but useful range of situations, perceptions, knowledge states and beliefs, including false beliefs.  
 
-To answer this question we constructed a minimal theory of mind.  The construction is sufficiently rich to explain systematic success on tasks held to be acid tests for theory of mind cognition including many false belief tasks.  It is also extensible in ways that can explain a range of findings from non-human animals and human infants that are often presented as evidence for full-blown theory of mind cognition.  Where minimal theory of mind must break down is in cases involving quantification or mistakes about identity.  Because such cases require full-blown theory of mind, it is possible to distinguish whether an individual’s performance on a particular task involves minimal or full-blown theory of mind cognition. 
+To answer this question we constructed a minimal theory of mind.  The construction is  rich enough to explain systematic success on tasks held to be acid tests for theory of mind cognition including many false belief tasks.  
+%It is also extensible in ways that can explain a range of findings from non-human animals and human infants that are often presented as evidence for full-blown theory of mind cognition.  
+Where minimal theory of mind must break down is in cases involving quantification or mistakes about identity (see Section \ref{sec:limits1}).  
+Because such cases require full-blown theory of mind, it is possible to distinguish whether an individual’s performance on a particular task involves minimal or full-blown theory of mind cognition. 
 
-The central notions for minimal theory of mind are encountering and registration.  We characterised these by their structures, acquisition conditions and roles in producing goal-directed actions.  Encountering and registration serve as non-representational proxies for perception and belief in this sense: in a limited but useful range of everyday circumstances, agents perceive an object just when they encounter it and they believe that an object has a given property just when they register it having that property.  But encountering differs from perception in not constitutively involving appearances, modalities or the possibility of illusion and in not being constitutively linked to reasons, knowledge or informational states.  Similarly, registration differs from belief in lacking representational content and the possibility of embedding, in not interacting in arbitrarily complex ways with other states, and in the simplicity of its parameter-setting role in causing actions.  These differences ensure that representing encountering or registration need not involve meeting conceptual and cognitive demands associated with representing perceptions, beliefs and other propositional attitudes as such.
+The central notions for minimal theory of mind are encountering and registration.  We characterised these by their structures, acquisition conditions and roles in producing goal-directed actions (see Section \ref{sec:minimal}).  Encountering and registration serve as non-representational proxies for perception and belief in this sense: in a limited but useful range of everyday circumstances, agents perceive an object just when they encounter it and they believe that an object has a given property just when they register it having that property.  But encountering differs from perception in not constitutively involving appearances, modalities or the possibility of illusion and in not being constitutively linked to reasons, knowledge or informational states.  Similarly, registration differs from belief in lacking representational content and the possibility of embedding, in not interacting in arbitrarily complex ways with other states, and in the simplicity of its parameter-setting role in causing actions.  These differences ensure that representing encountering or registration need not involve meeting conceptual and cognitive demands associated with representing perceptions, beliefs and other propositional attitudes as such.
 
 The novelty of our constructive approach lies in several features.  It does not rely directly on everyday psychological concepts, whose exact nature is a source of controversy.
 Nor does it rely on infants or non-human animals holding theoretical commitment to simplified versions of these concepts (contrast 
@@ -666,7 +674,7 @@ Importantly, we do not assume that minimal theory of mind develops into full-blo
 It may instead remain distinct, supporting cognitively efficient theory of mind across the lifespan \citep[see][]{Samson:2010jm, en_2397}.  The construction of minimal theory of mind is systematic enough to generate testable predictions distinguishing it from both behavioural stratetgies and full-blown theory of mind cognition (see Sections \ref{sec:limits1} and \ref{sec:limits2}).  
 Our construction makes detailed sense of the notion that there are degrees of theory of mind cognition.  
 (This is a virtue because while is widely recognised that degrees of theory of mind cognition are needed \citep[e.g.][]{en_610, en_1415}, there have been few detailed attempts to make systematic sense of this possibility.)
-It also pushes much further than earlier work the boundaries of what can be achieved without full-blown theory of mind cognition; in particular, it explains how systematic success on a range of false belief tasks (but not those which essentially involve identity or quantification) is possible without representing beliefs or other propositional attitudes as such. Minimal theory of mind may be what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load,  to track  perceptions, knowledge states and beliefs. 
+It also pushes much further than earlier work the boundaries of what can be achieved without full-blown theory of mind cognition; in particular, it explains how systematic success on a range of false belief tasks (but not those which essentially involve identity or quantification) is possible without representing beliefs or other propositional attitudes as such. Minimal theory of mind may be what enables those with limited cognitive resources or little conceptual sophistication, such as infants, chimpanzees, scrub-jays and human adults under load,  to track others'  perceptions, knowledge states and beliefs. 
 
 
 
