--- a/intention motor representation with corrado sinigaglia/conf lyon glasgow was spp submit rejected/intention and motor representation HANDOUT.tex
+++ b/intention motor representation with corrado sinigaglia/conf lyon glasgow was spp submit rejected/intention and motor representation HANDOUT.tex
@@ -4,7 +4,7 @@
 \documentclass[11pt]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {Intention and Motor Representation in Action Explanation}
+\def \ititle {Intention and Motor Representation in Purposive Action}
 \def \isubtitle {}
 \def \iauthor {Stephen A. Butterfill}
 \def \iemail{s.butterfill@warwick.ac.uk}
@@ -43,7 +43,7 @@
 
 \begin{center}
 {\Large
-\textbf{Intention and Motor Representation in Action Explanation}
+\textbf{Intention and Motor Representation in Purposive Action}
 }
 
 
@@ -94,7 +94,7 @@ Therefore, motor representations represent outcomes.
 
 \item Any two intentions can be inferentially integrated in practical reasoning.
 
-\item My intention that I visit Paris on Friday is a propositional attitude.
+\item My intention that I visit Glasgow on Monday is a propositional attitude.
 
 \item All intentions are propositional attitudes (from 1--3).
 
